--- a/clubs/index.html
+++ b/clubs/index.html
@@ -53,7 +53,7 @@
 <body>
 	<div id = "content">
 		<!--#include virtual="/harbingernews/tools/header.shtml"-->
-		<div class="navbar navbar-static-top" style = "border-bottom: orange !important;">
+		<div class="navbar navbar-static-top">
     <div class = "navbar-inner">
     	<div class = "container">
         	<ul class = "nav pull-left">
