--- a/clubs/index.html
+++ b/clubs/index.html
@@ -53,27 +53,27 @@
 <body>
 	<div id = "content">
 		<!--#include virtual="/harbingernews/tools/header.shtml"-->
-		<div class="navbar navbar-static-top">
+		<div class="navbar navbar-static-top" style = "border-bottom: #629b63;">
     <div class = "navbar-inner">
-    	<div class = "container">
-        	<ul class = "nav pull-left">
-            	<li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
+        <div class = "container">
+            <ul class = "nav pull-left">
+                <li class="dropdown" id="menu1"><!-- Starts the "Arts" dropdown menu-->
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    	Arts
-                    	<b class="caret"></b>
-                    	</a>
+                        Arts
+                        <b class="caret"></b>
+                        </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        	<li><a href="Art Club/template.php">Art</a></li>
-                        	<li><a href="Harbinger/template.php">Harbinger</a></li>
-                        	<li><a href="HTco/template.php">HTco</a></li>
-                        	<li><a href="Jazz Band/template.php">Jazz Band</a></li>
-                            <li><a href="Marching Band/template.php">Marching Band</a></li>
-                        	<li><a href="Music Appreciation/template.php">Music Appreciation</a></li>
-                        	<li><a href="NAHS/template.php">NAHS</a></li>
-                        	<li><a href="Playfest/template.php">Playfest</a></li>
-                            <li><a href="Tri-M/template.php">Tri-M</a></li>
-                        	<li><a href="Zephyr/template.php">Zephyr</a></li>
-                	</ul>
+                            <li><a href="Art Club/Art Club.php">Art</a></li>
+                            <li><a href="Harbinger/Harbinger.php">Harbinger</a></li>
+                            <li><a href="HTco/HTco.php">HTco</a></li>
+                            <li><a href="Jazz Band/Jazz Band.php">Jazz Band</a></li>
+                            <li><a href="Marching Band/Marching Band.php">Marching Band</a></li>
+                            <li><a href="Music Appreciation/Music Appreciation.php">Music Appreciation</a></li>
+                            <li><a href="NAHS/NAHS.php">NAHS</a></li>
+                            <li><a href="Playfest/Playfest.php">Playfest</a></li>
+                            <li><a href="Tri-M/Tri-M.php">Tri-M</a></li>
+                            <li><a href="Zephyr/Zephyr.php">Zephyr</a></li>
+                    </ul>
                 </li><!--Ends dropdown menu-->
 
             </ul>
@@ -84,12 +84,12 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="Academic Team/template.php">Academic Club</a></li>
-                        <li><a href="DECA/template.php">DECA</a></li>
-                        <li><a href="Future Educators Club/template.php">Future Educators Club</a></li>
-                        <li><a href="Mathletes/template.php">Mathletes</a></li>
-                        <li><a href="Mock Trial/template.php">Mock Trial</a></li>
-                        <li><a href="NHS/template.php">NHS</a></li>
+                        <li><a href="Academic Team/Academic Team.php">Academic Club</a></li>
+                        <li><a href="DECA/DECA.php">DECA</a></li>
+                        <li><a href="Future Educators Club/Future Educators Club.php">Future Educators Club</a></li>
+                        <li><a href="Mathletes/Mathletes.php">Mathletes</a></li>
+                        <li><a href="Mock Trial/Mock Trial.php">Mock Trial</a></li>
+                        <li><a href="NHS/NHS.php">NHS</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -101,11 +101,11 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="Community Outreach Club/template.php">Community Outreach</a></li>
-                        <li><a href="Global Justice/template.php">Global Justice</a></li>
-                        <li><a href="Habitat/template.php">Habitat for Humanity</a></li>
-                        <li><a href="Interact/template.php">Interact</a></li>
-                        <li><a href="SHOC/template.php">SHOC</a></li>
+                        <li><a href="Community Outreach Club/Community Outreach Club.php">Community Outreach</a></li>
+                        <li><a href="Global Justice/Global Justice.php">Global Justice</a></li>
+                        <li><a href="Habitat/Habitat.php">Habitat for Humanity</a></li>
+                        <li><a href="Interact/Interact.php">Interact</a></li>
+                        <li><a href="SHOC/SHOC.php">SHOC</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -117,12 +117,12 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu;">
-                        <li><a href="Caribbean Club/template.php">Caribbean Club</a></li>
-                        <li><a href="French Club/template.php">French Club</a></li>
-                        <li><a href="Italian Club/template.php">Italian Club</a></li>
-                        <li><a href="Model UN/template.php">Model UN</a></li>
-                        <li><a href="Council for Multicultural Unity/template.php">Multi-Cultural Club</a></li>
-                        <li><a href="Spanish Club/template.php">Spanish Club</a></li>
+                        <li><a href="Caribbean Club/Caribbean Club.php">Caribbean Club</a></li>
+                        <li><a href="French Club/French Club.php">French Club</a></li>
+                        <li><a href="Italian Club/Italian Club.php">Italian Club</a></li>
+                        <li><a href="Model UN/Model UN.php">Model UN</a></li>
+                        <li><a href="Council for Multicultural Unity/Council for Multicultural Unity.php">Multi-Cultural Club</a></li>
+                        <li><a href="Spanish Club/Spanish Club.php">Spanish Club</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -134,10 +134,10 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="Environmental Club/template.php">Environmental Club</a></li>
-                        <li><a href="Forensics Club/template.php">Forensics Club</a></li>
-                        <li><a href="Engineering and Science Club/template.php">Science and Engineering</a></li>
-                        <li><a href="Technology Club/template.php">Technology Club</a></li>
+                        <li><a href="Environmental Club/Environmental Club.php">Environmental Club</a></li>
+                        <li><a href="Forensics Club/Forensics Club.php">Forensics Club</a></li>
+                        <li><a href="Engineering and Science Club/Engineering and Science Club.php">Science and Engineering</a></li>
+                        <li><a href="Technology Club/Technology Club.php">Technology Club</a></li>
                     </ul>
                 </li><!--Ends dropdown menu-->
 
@@ -149,20 +149,17 @@
                     <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                        <li><a href="Athletes Helping Athletes/template.php">Athletes Helping Athletes</a></li>
-                        <li><a href="Best Buddies/template.php">Best Buddies</a></li>
-                        <li><a href="GSA/template.php">Gay/Straight Alliance</a></li>
-                        <li><a href="SADD/template.php">SADD</a></li>
-                        <li><a href="Student Gov/template.php">Student Government</a></li>
-                        <li><a href="Tri-Fit/template.php">Tri-Fit</a></li>
+                        <li><a href="Athletes Helping Athletes/Athletes Helping Athletes.php">Athletes Helping Athletes</a></li>
+                        <li><a href="Best Buddies/Best Buddies.php">Best Buddies</a></li>
+                        <li><a href="GSA/GSA.php">Gay/Straight Alliance</a></li>
+                        <li><a href="SADD/SADD.php">SADD</a></li>
+                        <li><a href="Student Gov/Student Gov.php">Student Government</a></li>
+                        <li><a href="Tri-Fit/Tri-Fit.php">Tri-Fit</a></li>
                     </ul>
                 </li><!--Ends final dropdown menu-->
             </ul>
-            <div style = "display:none;"
-		    </div>
-	    </div>
+        </div>
     </div>
-</div>
 </div>
 	<div>
 		<div>
